complete work on diagnose patient